# Final-project

./: Admin.cpp  Admin.h  Banned.h  CMakeLists.txt  Exception.h  Functions.cpp  Functions.h  Info.cpp  Info.h  Instructions.h  Person.cpp  Person.h  Report.cpp  Report.h  User.cpp  User.h  WrongChoice.h  main.cpp
files/: Admin.txt  Couples.txt  Info.txt  Match.txt  Reports.txt  Selected.txt  log.txt
